--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -54,8 +54,9 @@ r.Shadow.Virtual.Enable=1
 
 [/Script/EngineSettings.GameMapsSettings]
 ;defines what level to be loaded by default in the editor and at playback time
-EditorStartupMap=/Game/Main.Main
-EditorStartupMap=/Game/Main.Main
+EditorStartupMap=/Game/Maps/Loft_Interior.Loft_Interior
+EditorStartupMap=/Game/Maps/Loft_Interior.Loft_Interior
+GameDefaultMap=/Game/Maps/Loft_Interior.Loft_Interior
 
 [/Script/UnrealEd.UnrealEdEngine]
 ; Remove Engine Template maps
