--- a/Plugins/PakLoaderPlugin/PakLoader.uplugin
+++ b/Plugins/PakLoaderPlugin/PakLoader.uplugin
@@ -1,7 +1,7 @@
 {
 	"FileVersion": 3,
 	"Version": 1,
-	"VersionName": "1.4",
+	"VersionName": "1.6",
 	"FriendlyName": "Pak Loading Plugin",
 	"Description": "Enables you to load .pak files and use its assets.",
 	"Category": "Programming",
@@ -10,6 +10,7 @@
 	"DocsURL": "https://drive.google.com/file/d/1DeS0DlwLTue_jLNqjGHVHz6AHs89rDUM/view?usp=sharing",
 	"MarketplaceURL": "com.epicgames.launcher://ue/marketplace/content/fb9820b9b5c24f8ba178b2a11a61063f",
 	"SupportURL": "unreal.mp@bluemountains.io",
+	"EngineVersion": "5.3.0",
 	"CanContainContent": false,
 	"Installed": true,
 	"Modules": [
